--- a/styles/chamber.css
+++ b/styles/chamber.css
@@ -34,6 +34,7 @@ header.page-header {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+    max-width: 100%;
 }
 
 header h1 {
@@ -68,6 +69,7 @@ header p {
 
 nav {
     background-color: #006699;
+    max-width: 100%;
 }
 
 nav ul {
@@ -76,6 +78,7 @@ nav ul {
     list-style: none;
     padding: 10px;
     flex-wrap: wrap;
+    width: 100%;
 }
 /* Hide the navigation by default on mobile */
 nav ul {
@@ -158,6 +161,7 @@ main {
     max-width: 960px;
     margin: 20px auto;
     padding: 0 15px;
+    max-width: 100%;
 }
 
 
