--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -130,12 +130,12 @@ h2 {
 }
 
 #directory.list-view .card {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1.5fr 2.5fr 1.5fr 2fr 1.5fr 1.5fr 3fr;
+    column-gap: 1rem;
     align-items: center;
-    padding: 1rem;
-    border: 1px solid #ccc;
-    background-color: white;
-    margin-bottom: 1rem;
+    padding: 1rem 0;
+    border-bottom: 1px solid #ccc;
 }
 
 #directory.list-view .card img {
@@ -165,6 +165,8 @@ h2 {
 #directory.list-view img {
     display: none;
 }
+
+
 .card {
     background-color: white;
     border: 1px solid #ccc;
@@ -204,6 +206,33 @@ h2 {
     font-size: 0.95rem;
 }
 
+@media (max-width: 600px) {
+    #directory.list-view .card {
+        display: block;
+        /* Remove grid */
+        padding: 1rem;
+        border-bottom: 1px solid #ccc;
+    }
+
+    #directory.list-view .card img {
+        display: none;
+        /* Keep image hidden */
+    }
+
+    #directory.list-view .card>* {
+        display: block;
+        margin: 0.3rem 0;
+        padding: 0;
+        text-align: left;
+    }
+
+    /* Optionally, highlight name */
+    #directory.list-view .biz-name {
+        font-weight: 700;
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+    }
+}
 /* FOOTER */
 footer {
     display: flex;
