--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -71,9 +71,22 @@ nav {
 }
 
 #navMenu {
-    list-style: none;
-    display: flex;
-    gap: 1rem;
+    max-height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: max-height 0.7s ease, opacity 0.7s ease;
+    flex-direction: column;
+    background-color: #009688;
+    position: absolute;
+    top: 60px;
+    right: 0;
+    width: 100%;
+    z-index: 1000;
+}
+#navMenu.open {
+    max-height: 500px;
+    /* set high enough for all menu items */
+    opacity: 1;
 }
 
 #navMenu li a {
