--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -446,3 +446,10 @@ body.dark-mode .directory-controls button.active {
     background-color: #006b8f;
     /* Slightly lighter teal for hover */
 }
+
+nav ul li a.active {
+    background-color: #fff;
+    color: #009688;
+    padding: 0.4rem 0.8rem;
+    border-radius: 5px;
+}
