--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -175,7 +175,9 @@ main {
 
 .hero img {
     width: 100%;
-    height: auto;
+    height: 300px;
+    /* adjust to your preferred height */
+    object-fit: cover;
 }
 
 .cta {
