--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -28,7 +28,7 @@ a:hover {
 /* HEADING STYLES */
 h1 {
     font-size: 2.5rem;
-    color: #e3ecef;
+    color: #aaa7bb;
     margin-bottom: 1rem;
 }
 
