--- a/final/styles/main.css
+++ b/final/styles/main.css
@@ -134,7 +134,7 @@ section {
 
 section h2,
 h2 {
-    color: #0077b6;
+    color: #f8fdff;
     font-family: 'Roboto', sans-serif;
     margin: 2rem 0 1rem;
 }
